--- a/networks/ldm/ldmaex2.yaml
+++ b/networks/ldm/ldmaex2.yaml
@@ -7,7 +7,7 @@ model:
     lossconfig:
       target: ldm.modules.losses.LPIPSWithDiscriminator
       params:
-        disc_start: 50001
+        disc_start: 1 # 50001
         kl_weight: 0.000001
         disc_weight: 0.5
 
