--- a/ldm/ldmaex2x2.yaml
+++ b/ldm/ldmaex2x2.yaml
@@ -18,12 +18,12 @@ model:
       in_channels: 1
       out_ch: 1
       ch: 64
-      ch_mult: [ 1,2,2,4 ]  # num_down = len(ch_mult)-1
+      ch_mult: [ 1,2,4]  # num_down = len(ch_mult)-1
       num_res_blocks: 1
       attn_resolutions: [ ]
       dropout: 0.0
       branch_point: "mid"
-      interpolator: "ed023e"
+      interpolator: ed023ex2
 
 data:
   target: main.DataModuleFromConfig
