--- a/ldm/ldmaex2x2.yaml
+++ b/ldm/ldmaex2x2.yaml
@@ -10,6 +10,7 @@ model:
         disc_start: 1 # 50001
         kl_weight: 0.000001
         disc_weight: 0.5
+        disc_in_channels: 1
 
     ddconfig:
       double_z: True
